@startuml

skinparam linetype ortho

entity Persons {
    ID : int <<PK>>
    Name_Family : nvarchar
    Name_Given : nvarchar
    Name_IsGivenFirst : bit
    Email : nvarchar
    Rank : int
}

entity Tournaments {
    ID : int <<PK>>
    Name : nvarchar
    Location : nvarchar
    StartDate : date
    EndDate : date
    Ruleset : int
    OrganizerId : int <<FK>>
}

entity TournamentParticipants {
    ParticipantsId : int <<FK>>
    PartipatingInId : int <<FK>>
    ' Ranking : int
}

TournamentParticipants }o--|| Tournaments
TournamentParticipants }o--|| Persons

Persons ||--o{ Tournaments : "organizes"

@enduml
